--- a/_layouts/post_fr.html
+++ b/_layouts/post_fr.html
@@ -4,6 +4,12 @@
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
+			<!-- link to langswitch stylesheet -->
+			<link rel="stylesheet" type="text/css" href="/css/lang_switch.css">
+			<!-- link to lightswitch stylesheet -->
+			<link rel="stylesheet" type="text/css" href="/css/light_switch.css">
+			<!-- link to scrolltop stylesheet -->
+			<link rel="stylesheet" type="text/css" href="/css/scroll_top.css">
 			<!-- link for icon -->
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		</head>
