Work Experience -> Experiences

--- a/_includes/header_en.html
+++ b/_includes/header_en.html
@@ -1,8 +1,8 @@
 <nav>
     <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/work_experiences">Work experiences</a></li>
-            <li><a href="/projects">My projects</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/experiences">Experiences</a></li>
+        <li><a href="/projects">My projects</a></li>
     </ul>
     <ul style="position: absolute; top: -0.2em; right: 0px;">
         {% include light_switcher.html %}
