--- a/_includes/header_fr.html
+++ b/_includes/header_fr.html
@@ -1,7 +1,7 @@
 <nav>
     <ul>
         <li><a href="/fr">Accueil</a></li>
-        <li><a href="/work_experiences/fr">Expériences</a></li>
+        <li><a href="/experiences/fr">Expériences</a></li>
         <li><a href="/projects/fr">Mes projets</a></li>
     </ul>
     <ul style="position: absolute; top: -0.2em; right: 0px;">
