Create a research section and replace the project section with it.

--- a/_includes/header_en.html
+++ b/_includes/header_en.html
@@ -2,7 +2,7 @@
     <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/experiences">Experiences</a></li>
-        <li><a href="/projects">My projects</a></li>
+        <li><a href="/research">My research activities</a></li>
     </ul>
     <ul style="position: absolute; top: -0.2em; right: 0px;">
         {% include light_switcher.html %}
