--- a/_includes/header_fr.html
+++ b/_includes/header_fr.html
@@ -2,7 +2,7 @@
     <ul>
         <li><a href="/fr">Accueil</a></li>
         <li><a href="/experiences/fr">Expériences</a></li>
-        <li><a href="/projects/fr">Mes projets</a></li>
+        <li><a href="/recherche/fr">Mes projets de recherche</a></li>
     </ul>
     <ul style="position: absolute; top: -0.2em; right: 0px;">
         {% include light_switcher.html %}
