--- a/_includes/footer_fr.html
+++ b/_includes/footer_fr.html
@@ -1,7 +1,7 @@
 
 <footer>
     <ul>
-        <li> 
+        <li>
             <i class="fa fa-envelope" aria-hidden="true"></i>
              <a href="mailto:moineaucyril@gmail.com">
                  email</a>
@@ -12,11 +12,15 @@
         </li> -->
         <li>
             <i class="fa fa-github fa-lg" aria-hidden="true"></i>
-            <a href="https://github.com/cmoineau"> github.com/cmoineau</a>
+            <a href="https://github.com/cmoineau"> GitHub</a>
         </li>
         <li>
             <i class="fa fa-linkedin-square fa-lg" aria-hidden="true"></i>
-            <a href="https://www.linkedin.com/in/cmoineau"> linkedin/in/cmoineau</a>
+            <a href="https://www.linkedin.com/in/cmoineau"> LinkedIn</a>
+        </li>
+        <li>
+            <i class="fa fa-graduation-cap fa-lg" aria-hidden="true"></i>
+            <a href="https://scholar.google.com/citations?user=_YlaxooAAAAJ&hl"> Google Scholar</a>
         </li>
         <li id="lastchange" style="float : right; font-size: 0.8em; padding-right: 1em;"></li>
     </ul>
