--- a/css/glitch.css
+++ b/css/glitch.css
@@ -2,10 +2,12 @@
     font-family: Jost-h;
     src: url("/font/Jost-100-Hairline.otf");
 }
+
 @font-face {
     font-family: Jost-i;
     src: url("/font/Jost-200-ThinItalic.otf");
 }
+
 .glitch {
     position: relative;
     color: white;
@@ -16,32 +18,35 @@
 
 @keyframes glitch-skew {
     0% {
-    transform: skew(-1deg) translate(0.1em, 0em);
-    opacity: 1;
-    font-family: Jost-h;
+        transform: skew(-1deg) translate(0.1em, 0em);
+        opacity: 1;
+        font-family: Jost-h;
     }
 
     25% {
-    opacity: 0.75;
-    color:#00e59b;
-    font-family: Jost-i;
+        opacity: 0.75;
+        color: --a-color;
+        font-family: Jost-i;
 
     }
+
     50% {
-    opacity: 0.2;
-    transform: translate(0.1em, 0.1em);
-    font-family: Jost-h;
+        opacity: 0.2;
+        transform: translate(0.1em, 0.1em);
+        font-family: Jost-h;
     }
+
     75% {
-    opacity: 0.3;
-    transform: skew(1deg) translate(0em, 0.1em);
-    text-decoration:line-through;
+        opacity: 0.3;
+        transform: skew(1deg) translate(0em, 0.1em);
+        text-decoration: line-through;
     }
+
     100% {
-    transform: skew(0deg) translate(0em, 0em);
-    opacity: 1;
-    font-family: Jost-h;
-    text-decoration:none;
+        transform: skew(0deg) translate(0em, 0em);
+        opacity: 1;
+        font-family: Jost-h;
+        text-decoration: none;
 
     }
 }
